# nexus

./: .gitignore  Cargo.toml  README.md  start.sh  stop.sh
config/: hsb.toml  hsb.ui-regression-8090.toml  hsb.ui-regression.toml
deploy/k8s/: hsb-server.yaml
docs/: foshan-health-platform-integration.md  hsb-canonical-message-design.md  hsb-integration-guide.md  hsb-ui-prd.md
hsb-adapter/: Cargo.toml
hsb-adapter/src/: lib.rs
hsb-adapter/src/dicom/: mod.rs  parser.rs  serializer.rs  services.rs  tags.rs
hsb-adapter/src/fhir/: bundle.rs  mod.rs  parser.rs  resources.rs  serializer.rs
hsb-adapter/src/hl7/: ack.rs  mod.rs  parser.rs  segment.rs  serializer.rs  types.rs
hsb-adapter/src/hl7v3/: mod.rs
hsb-adapter/src/soap/: envelope.rs  mod.rs  parser.rs  serializer.rs
hsb-admin/: Cargo.toml
hsb-admin/src/: handlers.rs  lib.rs  models.rs  routes.rs  state.rs
hsb-admin/src/audit/: audit_log.rs  metrics.rs  mod.rs  storage.rs  trace.rs
hsb-admin/src/bench/: bench_runner.rs  mod.rs  report.rs  stats.rs
hsb-admin/src/bench/test_suites/: adapter_tests.rs  audit_tests.rs  core_tests.rs  engine_tests.rs  mod.rs  reliability_tests.rs  transport_tests.rs
hsb-common/: Cargo.toml
hsb-common/src/: config.rs  constants.rs  error.rs  lib.rs  sso_client.rs  types.rs  utils.rs
hsb-core/: Cargo.toml
hsb-core/src/: adapter.rs  catalog.rs  context.rs  endpoint.rs  lib.rs  message.rs  route.rs  transformer.rs  transport.rs  workflow.rs
hsb-core/src/cluster/: discovery.rs  mod.rs  sync.rs
hsb-core/src/engine/: dispatcher.rs  mod.rs  pipeline.rs  registry.rs  router.rs
hsb-core/src/persistence/: mod.rs  pg_store.rs  redb_store.rs
hsb-core/src/reliability/: circuit_breaker.rs  dlq.rs  mod.rs  queue.rs  retry.rs
hsb-mock-endpoints/: Cargo.toml  README.md  build.rs
hsb-mock-endpoints/proto/: mock_endpoint.proto
hsb-mock-endpoints/src/: lib.rs  profiles.rs
hsb-server/: Cargo.toml
hsb-server/src/: bootstrap.rs  config.rs  main.rs  server.rs
hsb-server/ui/: app.js  index.html
hsb-transport/: Cargo.toml  build.rs
hsb-transport/src/: lib.rs
hsb-transport/src/grpc/: client.rs  config.rs  mod.rs  server.rs  sso.rs
hsb-transport/src/http/: client.rs  config.rs  mod.rs  server.rs
hsb-transport/src/kafka/: config.rs  mod.rs
hsb-transport/src/mq/: config.rs  consumer.rs  mod.rs  producer.rs
hsb-transport/src/nats/: config.rs  jetstream.rs  mod.rs
hsb-transport/src/tcp/: client.rs  config.rs  mllp.rs  mod.rs  server.rs
