[package]
name = "hsb-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hsb-common = { workspace = true }
hsb-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Protocol-specific
quick-xml = { workspace = true }
fhir-model = { workspace = true }
dicom = { workspace = true }
dicom-core = { workspace = true }
dicom-object = { workspace = true }
dicom-ul = { workspace = true }
