[package]
name = "hsb-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "hsb_admin"
path = "src/lib.rs"

[[bin]]
name = "hsb-bench"
path = "src/bin/bench.rs"

[dependencies]
hsb-common = { workspace = true }
hsb-core = { workspace = true }
hsb-adapter = { workspace = true }
hsb-transport = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
