[package]
name = "hsb-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hsb-common = { workspace = true }
hsb-core = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP
axum = { workspace = true }
reqwest = { workspace = true }

# TCP - no extra deps

# MQ
futures-lite = { workspace = true }
lapin = { version = "2.5", features = ["native-tls"] }
rdkafka = { workspace = true }

# NATS
async-nats = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
http = "1.2"

[build-dependencies]
tonic-build = "0.12"
